--- a/styles.css
+++ b/styles.css
@@ -36,21 +36,10 @@ section {
 	height: auto;
 }
 
-form {
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
-	width: 300px;
-	
+#contactForm {
+	max-width: 100%;
+	height: auto;
 }
-
-form button {
-	width: 80px;
-	height: 30px;
-	margin-top: 10px;
-	align-self: center;
-}
-
 
 
 footer {
